# searchlight-ui

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  lower-constraints.txt  openstack-common.conf  package.json  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  dev.rst  devstack.rst  horizon.rst  index.rst  installation.rst  local.rst  npm.rst
releasenotes/notes/: bp-searchlight-search-panel-ba7e4c97a0460f85.yaml  drop-python-2-7-73d3113c69d724d2.yaml  newton3-release-notes-c409603d25f6bd7e.yaml  registered-detail-views-9944fc531d5648a2.yaml  registry-drawers-db9ed4daaf2a6c12.yaml
releasenotes/source/: conf.py  index.rst
searchlight_ui/: __init__.py  karma.conf.js  version.py
searchlight_ui/api/rest/: __init__.py  searchlight.py
searchlight_ui/conf/: README.rst  searchlight_policy.json
searchlight_ui/dashboards/project/search/: __init__.py  urls.py  views.py
searchlight_ui/dashboards/search/: dashboard.py
searchlight_ui/dashboards/search/search/: panel.py  urls.py  views.py
searchlight_ui/enabled/: _0900_search_dashboard.py  _0910_search_panel.py  _1001_project_search_panel.py
searchlight_ui/local_settings.d/: _1001_search_settings.py
searchlight_ui/static/resources/: resources.module.js
searchlight_ui/static/searchlight-ui/: searchlight-ui.module.js  searchlight-ui.module.spec.js  searchlight-ui.scss
searchlight_ui/tests/: settings.py  test_searchlight_ui.py  urls.py
searchlight_ui/tests/api_tests/: searchlight_rest_tests.py  test_searchlight_rest.py
searchlight_ui/tests/integration_tests/: horizon.conf
tools/gate/integration/: commons  post_test_hook.sh  pre_test_hook.sh
(+217 files in other folders)
