[metadata]
name = searchlight-ui
summary = Horizon panels and libraries for Searchlight
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    searchlight_ui

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = searchlight_ui/locale
domain = searchlight-ui

[update_catalog]
domain = searchlight-ui
output_dir = searchlight_ui/locale
input_file = searchlight_ui/locale/searchlight-ui.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = searchlight_ui/locale/searchlight-ui.pot
