[metadata]
name = searchlight-ui
summary = Horizon panels and libraries for Searchlight
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page =  https://docs.openstack.org/searchlight/latest
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages = searchlight_ui

[upload_sphinx]
upload-dir = doc/build/html
